objects/Attachment_Detail__c.object
<CustomObject>
    <fields>
        <fullName>AttachmentId__c</fullName>
        <label>AttachmentId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attachment_Name__c</fullName>
        <description>Feed Outbound - Attachment</description>
        <formula>Name&amp;&quot;_&quot;&amp;&quot;E&quot;&amp; Issue__r.CaseNumber &amp;&quot;.&quot;&amp;File_Type__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Attachment Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreatedDate__c</fullName>
        <description>Feed Outbound - DateFormat.</description>
        <formula>MID( TEXT(CreatedDate) , 6, 2)+&quot;/&quot;+MID( TEXT(CreatedDate) , 9, 2)+&quot;/&quot;+MID( TEXT(CreatedDate) , 0, 4) + &quot; &quot;+MID(TEXT(CreatedDate), 11, 9)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CreatedDate</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>File_Name__c</fullName>
        <description>Feed Outbound - Attachment</description>
        <label>File Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>File_Type__c</fullName>
        <description>Feed Outbound - Attachment</description>
        <label>File Type</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsActive__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IssueID__c</fullName>
        <description>FeedOutbound - Issue ID.</description>
        <formula>Issue__r.CaseNumber</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IssueID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Issue__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Issue</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Attachment Details</relationshipLabel>
        <relationshipName>Attachment_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LastModifiedDate__c</fullName>
        <description>Feed Outbound - DateFormat.</description>
        <formula>MID( TEXT(LastModifiedDate) , 6, 2)+&quot;/&quot;+MID( TEXT(LastModifiedDate) , 9, 2)+&quot;/&quot;+MID( TEXT(LastModifiedDate) , 0, 4) + &quot; &quot;+MID(TEXT(LastModifiedDate), 11, 9)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LastModifiedDate</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isReviewed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used for checking if the record is ready to send in feed.</description>
        <label>isReviewed</label>
        <type>Checkbox</type>
    </fields>
    <label>Attachment Detail</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>IssueAttachmentId</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Attachment Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>